--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "ngx-owl-carousel-o": "^6.0.0",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.0.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
+    "rxjs-observable": "0.0.7",
     "sweetalert2": "^11.0.19",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
