--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@frontend-sdk/yotpo": "^0.24.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-ecom-kit/ng-yotpo": "0.0.5",
     "@types/jquery": "^3.5.6",
     "angular2-text-mask": "^9.0.0",
     "animate.css": "^4.1.1",
