--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular2-text-mask": "^9.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
+    "braintree-web": "^3.83.0",
     "jquery": "^3.6.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^6.2.0",
