--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.6.0",
     "braintree-web": "^3.83.0",
     "jquery": "^3.6.0",
+    "ng-recaptcha": "^9.0.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-freshchat": "^0.2.0",
