--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@ecgtheowltd/can-deactivate-guard": "^1.0.4",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@frontend-sdk/yotpo": "^0.24.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
